[tool.poetry]
name = "test_task_cv3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.5.5"
numpy = "^1.22.2"
numba = "^0.59.1"
memory-profiler = "^0.61.0"
cython = "^3.0.10"
setuptools = "^69.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
